--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "craco-less": "^2.0.0",
     "firebase": "^9.8.3",
     "iconsax-react": "^0.0.8",
+    "less": "^4.1.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "node-sass": "^7.0.1",
@@ -39,10 +40,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "less": "lessc --js src/Styles/custom.less src/Styles/custom.css"
   },
   "eslintConfig": {
     "extends": [
